<resources>
    <string name="app_name">NewsPart2</string>
    <string name="noConnection">No connection. \n Check your internet connection and restart the application.</string>
    <string name="noNews">There are no news to be displayed.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_number_of_news">Number of news</string>
    <string name="settings_default_news_number">10</string>
    <string name="settings_number_of_news_key" translatable="false">num_of_news</string>

    <string name="settings_category_title">News category</string>
    <string name="settings_category">Choose category</string>
    <string name="settings_category_key" translatable="false">category_of_news</string>

    <string name="settings_sport">Sport</string>
    <string name="settings_science">Science</string>
    <string name="settings_money">Money</string>
    <string name="settings_technology">Technology</string>
    <string name="settings_business">Business</string>

</resources>
